--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <style>
       body {
         background: black;
+        overflow: hidden;
+        margin: 0;
       }
     </style>
   </head>
